feat : unify auth
